WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244159
REGRESSION (
253593@main
): [ macOS ] inspector/canvas/updateShader-webgl.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=244159
Summary
REGRESSION (253593@main): [ macOS ] inspector/canvas/updateShader-webgl.html ...
Karl Rackler
Reported
2022-08-20 09:12:29 PDT
Description: inspector/canvas/updateShader-webgl.html REPRODUCTION STEPS I can reproduce this on
253593@main
but cannot reproduce it on
253592@main
or earlier. Command: run-webkit-tests --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry inspector/canvas/updateShader-webgl.html Result: Regressions: Unexpected text-only failures (1) inspector/canvas/updateShader-webgl.html [ Failure ] History:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Fcanvas%2FupdateShader-webgl.html&platform=mac&limit=50000
Diff: --- /Volumes/Data/worker/Apple-Monterey-Release-AppleSilicon-WK2-Tests/build/layout-test-results/inspector/canvas/updateShader-webgl-expected.txt +++ /Volumes/Data/worker/Apple-Monterey-Release-AppleSilicon-WK2-Tests/build/layout-test-results/inspector/canvas/updateShader-webgl-actual.txt @@ -1,5 +1,3 @@ -CONSOLE MESSAGE: WebGL: ERROR: 0:1: 'INVALID' : syntax error -CONSOLE MESSAGE: WebGL: ERROR: 0:1: 'INVALID' : syntax error WebGL tests for Canvas.updateShader command.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-20 09:12:48 PDT
<
rdar://problem/98926428
>
Karl Rackler
Comment 2
2022-08-20 09:18:03 PDT
I have marked this test as a consistent failure while this issue is investigated.
EWS
Comment 3
2022-08-20 09:23:26 PDT
Test gardening commit
253617@main
(d3090df896a4): <
https://commits.webkit.org/253617@main
> Reviewed commits have been landed. Closing PR #3504 and removing active labels.
Alexey Proskuryakov
Comment 4
2022-08-21 14:46:22 PDT
This seems like an expected result of that patch, so likely a rebase. Kimmo will know for certain.
Kimmo Kinnunen
Comment 5
2022-08-23 08:24:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3577
EWS
Comment 6
2022-08-29 06:13:49 PDT
Committed
253902@main
(c984b72df669): <
https://commits.webkit.org/253902@main
> Reviewed commits have been landed. Closing PR #3577 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug