REGRESSION (253593@main): [ macOS ] inspector/canvas/updateShader-webgl.html is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=244159 rdar://problem/98926428

Reviewed by Devin Rousso.

Shader compilation status cannot be queried after invoking the compilation,
because this will block otherwise asynchronous method. This means we cannot
print the ad hoc console message on all compile failures. The commit
253593@main removed the message for all WebGL shader compiles.

Add the error message back when user edits the shader with inspector.

* LayoutTests/inspector/canvas/updateShader-webgl-expected.txt:
* LayoutTests/platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/253902@main